--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "ms-vscode-remote.remote-containers",
 		"ms-vscode-remote.remote-ssh",
 		"ms-vscode-remote.remote-ssh-editor",
-		"ms-vscode.remote-repositories"
+		"ms-vscode.remote-repositories",
+        "GitHub.remotehub",
+        "ms-vscode.remote-server"
     ]
 }
