--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Collection of extensions for remote connections only",
     "version": "0.0.1",
     "publisher": "Maruf",
+    "repository": "https://github.com/mbeps/maruf.remote-connection-module",
     "engines": {
         "vscode": "^1.67.0"
     },
